<resources>
    <string name="app_name">Усыновление в РБ</string>
    <string name="start_page">Начало</string>
    <string name="child_protection_page">Шаг 1</string>
    <string name="ncu_page">Шаг 2</string>
    <string name="orphanage_page">Шаг 3</string>
    <string name="court_page">Шаг 4</string>
    <string name="home_page">Шаг 5</string>
    <string name="help_page">Помощь</string>
    <string name="contentDescription_logo">Логотип закладки</string>
    <string name="contentDescription_Info">Логотип примечания</string>
    <string name="menu_debug">Обратная связь</string>
    <string name="menu_version">О программе</string>
    <string name="menu_license">Лицензия</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_debug_button_send_email">Отправить письмо</string>
    <string name="menu_version_button_github">Исходный код</string>
    <string name="menu_exit_send">До свидание</string>
    <string name="menu_version_current">Текущая версия: %s</string>
    <string name="menu_button_closed">Закрыть</string>
    <string name="menu_debug_email_subject">Отзыв/предложение по приложению Усыновление в РБ</string>
    <string name="menu_debug_send_email_url">mrtowelie@disroot.org</string>
    <string name="menu_debug_url_github">https://github.com/MisterTowelie/AdoptiveParentBelarus/</string>
    <string name="menu_version_open_github">Переход на сайт разработчика</string>
    <string name="menu_debug_send">Сообщить о проблеме, оставить отзыв, предложение</string>
    <string name="send_no_app">Не найдено необходимое приложение</string>
    <string name="night_mode">Night Mode</string>
    <string name="step_0_Title">
        Усыновление шаг за шагом.
        \nЕсли вы решили стать усыновителем (удочерителем).
    </string>
    <string name="step_0_Big">
        <b>Усыновление (удочерение)</b> - это особый путь родительства, основанный на принятии чужого ребенка как своего, родного.
        \n\n В результате усыновления (удочерения) между усыновителем (удочерителем) и усыновленным (удочериенным) возникают
        такие же права и обязанности, как между кровными родителями и их детьми.
        \n\n Усыновить (удочерить) ребенка может как супружеская пара, так и одинокий человек не зависимо от пола.

        \n\n <b>Вы можете стать усыновителем (удочерителем), если:</b>
        \n <i> —> достигли совершеннолетия либо приобрели дееспособность до достижения совершеннолетия,</i>
        \n\n <i> —> состояние вашего здоровья позволяет Вам воспитывать ребенка,</i>
        \n\n <i> —> имеете стабильное материальное положение,</i>
        \n\n <i> —> имеете постоянное место жительства, жилье, отвечающее санитарно-техническим требованиям.</i>
    </string>
    <string name="step_0_End">
        <b>Следующий шаг</b> - сбор документов.
        \nВам необходимо обратиться в органы опеки и попечительства.
    </string>
    <string name="step_1_Title">
        Сбор документов.\nЗаявление на обследование условий вашей жизни.
    </string>
    <string name="step_1_Big">
        <b>Для сбора необходимых документов</b> Вам необходимо обратиться в органы опеки и попечительства по месту жительства.
        \n\n Органы опеки и попечительства выдадут вам необходимые документы и направят вас в Социально-педагогический центр
        или Национальный центр усыновления (по вашему желанию) для прохождения <i>психологической диагностики и обучения.</i>

        \n\n После прохождения обучения органы опеки и попечительства:
        \n <i> —> проанализируют информацию о вашей правоспособности к усыновлению (удочерению),</i>
        \n\n <i> —> изучат уклад жизни,</i>
        \n\n <i> —> взаимоотношения в семье,</i>
        \n\n <i> —> оценят готовность семьи удовлетворить жизненые потребности ребенка,</i>
        \n\n <i> —> вынесут заключение, о том, можете ли вы стать усыновителем (удочерителем).</i>

        \n\n После получение всех необходимых документов вам необходимо встать на учет как кандидат в усыновители (удочерители) в <i>Национальном центре усыновления</i><a href="http://www.nacedu.by"/>
    </string>
    <string name="step_1_End">
        <b>Следующий шаг</b> - подбор кандидатуры ребенка.
        \nВам необходимо обратиться в <i>Национальный центр усыновления.</i>
    </string>
    <string name="step_2_Title">
        Постановка на учет.\nПодбор кандидатуры ребенка.
    </string>
    <string name="step_2_Big">
        <b>Если заключение органов опеки и попечительства <i>положительное,</i></b> специалисты Национального центра усыновления
        поставят вас на учет в качестве кандидатов в усыновители (удочерители).

        \n\n И осуществлят подбор ребенка в <i>республиканском банке данных</i>, соответствующего вашему запросу,
        в детских интернатных учреждениях, организациях здравоохранения, опекунских, приемных семьях,
        детских домах семейного типа.

        \n\n Кандидаты в усыновители (удочерители) знакомятся с личными карточками детей, в которых
        содержится информация о ребенке.

        \n\n При подборе ребенка кандидатам в усыновители (удочерители) представляется вся имеющаяся информация
        о здоровье, развитии, личностных характеристиках и особых потребностях ребенка, а также имеющаяся
        информация о родителях и других родственниках детей.

        \n\n <b>Для поиска кандидатур детей</b> вы можете воспользоваться возможностями портала <a href="http://www.dadomu.by/">dadomu.by</a>.
        \nС помощью портала можно ознакомиться с краткой информацией о детях, нуждающихся в усыновлении (удочерении).

        \n\n <b>Для знакомства с ребенком</b> кандидату в усыновители (удочерители) выдается <i>направление на знакомство.</i>
    </string>
    <string name="step_2_End">
        <b>Следующий шаг</b> - знакомство с выбранным ребенком.
        \nВам необходимо обратиться по месту нахождения ребенка.
    </string>
    <string name="step_3_Title">
        Знакомство с ребенком.\nПринятие решения.
    </string>
    <string name="step_3_Big">
        <b>Знакомство и встречи</b> с заинтересовавшим вас ребенком происходят только по направлению Национального центра усыновления.
        \n\n <b>Вам необходимо предварительно позвонить</b> и договориться о времени и месте предстоящей встречи:
        \n<i> —> в детское учреждение (главному врачу дома ребенка или директору детского дома), если ребенок находится в доме ребенка или детском доме,</i>
        \n<i> —> в органы опеки и попечительства по месту нахождения ребенка, если ребенок находится в приемной семье, детском доме семейного типа, семье опекуна,попечителя.</i>

        \n\n При посещении вы можете ознакомится с личным делом ребенка.

        \n\n <b>В ходе анализа информации о состоянии здоровья ребенка важно определиться:</b>
        \n<i> —> готовы ли вы к тому, что от той или иной проблемы избавиться не удастся никогда?</i>
        \n\n<i> —> если ребенку потребуется операция или госпитализация, решите для себя – сможете ли вы это обеспечить?</i>
        \n\n<i> —> возможно, ребенку необходима определенная диета – сможете ли вы готовить ему регулярно отдельно?</i>

        \n\n <b>Главное вам необходимо трезво оценивать свои возможности и силы.</b>

        \n\n <b>Усыновителю (удочерителю) должна быть представлена вся информация</b> о состоянии здоровья
        усыновляемого ребенка, а также имеющаяся информация о близких родственниках усыновляемого ребенка и состоянии их здоровья.
    </string>
    <string name="step_3_End">
        <b>Следующий шаг</b> - подача заявления в суд.
        \nВам необходимо обратиться в суд.
    </string>
    <string name="step_4_Title">
        Обращение в суд.\nЗаявление в суд об усыновлении (удочерении).
    </string>
    <string name="step_4_Big">
        <b>Усыновление (удочерение) производится районным (городским) судом</b> по заявлению лица, желающего усыновить (удочерить) ребенка,
        по месту нахождения ребенка или по месту жительства усыновителей (удочерителей), информацию о месте нахождения судов можно найти
        на сайте Верховного Суда РБ <a href="http://court.gov.by/">court.gov.by</a>

        \n\n<b> Для обеспечения тайны усыновления (удочерения)</b> и в интересах ребенка по просьбе усыновителей (удочерителей) могут быть изменены
        <i>фамилия, имя, отчество, дата рождения усыновленного (удочеренного) ребенка (не более чем на один год), а также место его рождения</i>
        (в пределах Республики Беларусь).

        \n\n После вступления в силу решения об усыновлении (удочерении) <i>ребенок передается в семью.</i> Вы становитесь родителями ребенка.
    </string>
    <string name="step_4_End">
        <b>Следующий шаг</b> - регистрация усыновленого (удочереного) ребенка в государственных органах.
    </string>
    <string name="step_5_Title">
        Передача и регистрация усыновленного (удочеренного) ребенка.
    </string>
    <string name="step_5_Big">
        <b> Усыновленный (удочеренный) ребенок передается усыновителям (удочерителям)</b> на основании решения суда.
        \n\n Вместе с ребенком усыновителям (удочерителям), одновременно передаются по акту:
        \n <i> —> свидетельство о рождении ребенка,</i>

        \n\n <i> —> выписка (копия) из медицинских документов и копия медицинской справки о состоянии здоровья усыновляемого ребенка,</i>

        \n\n <i> —> документы об обучении (для детей школьного возраста),</i>

        \n\n <i> —> документы о родителях (свидетельство о смерти, решение суда и другие документы, подтверждающие
        отсутствие правоотношений родителей с ребенком),</i>

        \n\n <i> —> сведения о наличии и местонахождении братьев и сестер,</i>

        \n\n <i> —> опись имущества, принадлежащего ребенку, и сведения о лицах, отвечающих за его сохранность
        (если таковое имеется),</i>

        \n\n <i> —> документ, подтверждающий наличие у ребенка в собственности жилого помещения (его части, если таковое имеется),</i>

        \n\n <i> —> иные документы, имеющиеся в личном деле ребенка. </i>

        \n\n <b>Регистрация усыновления (удочерения)</b> осуществляется органами загса по месту вынесения решения об усыновлении (удочерении),
        <i>при изменении места рождения ребенка восстанавливается запись акта о рождении ребенка органом загс по измененному месту рождения.</i>

        \n\n <b>Регистрация ребенка по месту жительства</b> осуществляется усыновителями (удочерителями) по своему месту жительства
        <i>не позднее одного месяца</i> со дня вступления в законную силу решения суда об усыновлении (удочерении).

        \n\n Органы опеки и попечительства осуществляют учет усыновленных детей и контроль за условиями жизни и воспитания усыновленных
        детей в семьях усыновителей (удочерителей)<i> в течении 3 лет после усыновления.</i>
    </string>
    <string name="step_5_End">
        <b>Следующий шаг</b> - cопровождение семьи усыновителей (удочерителей).
    </string>
    <string name="step_6_Title">
        Сопровождение семьи усыновителей (удочерителей).
    </string>
</resources>